[project]
name = "lakipay-py-sdk"
version = "0.1.0"
description = "Official Python SDK for integrating with the LakiPay payment API."
authors = [{ name = "Lakipay", email = "support@lakipay.co" }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://lakipay.co"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

